Closes #44 Mark all as read link at the bottom of all articles #44 features only for collapsed mode Fix mark as read bug for string array

--- a/reader-web/src/main/webapp/stylesheets/main.less
+++ b/reader-web/src/main/webapp/stylesheets/main.less
@@ -571,6 +571,15 @@
           }
         }
       }
+
+      > .markread {
+        display: block;
+        padding: 16px;
+        text-align: center;
+        font-weight: bold;
+        color: @main-color;
+        cursor: pointer;
+      }
     }
   
     > .feed-item {
@@ -718,12 +727,7 @@
     }
 
     > .markread {
-      display: block;
-      padding: 16px;
-      text-align: center;
-      font-weight: bold;
-      color: @main-color;
-      cursor: pointer;
+      display: none;
     }
     
     > .bumper {
